# SentinelScapyScan

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALLATION.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.example.yaml  pyproject.toml  scanme_working.html  setup_and_validate.py
.github/workflows/: ci.yml
.windsurf/workflows/: sentinel-scapy-scan-plan.md
SentinelScapyScan/: __init__.py  cli.py  manager.py  models.py  scanme_fixed.html
SentinelScapyScan/fingerprinting/: __init__.py  banner.py  http_fp.py  tls_fp.py
SentinelScapyScan/reporting/: __init__.py  html_report.py  json_writer.py
SentinelScapyScan/reporting/templates/: report.html.j2
SentinelScapyScan/scanners/: __init__.py  arp_scan.py  icmp_scan.py  syn_scan.py  udp_scan.py
SentinelScapyScan/utils/: __init__.py  config.py  logging.py
docs/: architecture.md
sample_reports/: sample_scan.html  sample_scan.json
tests/: test_dns_probe.py  test_report_generation.py  test_syn_scan.py
